--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,13 @@
 			<version>2.2.10</version>
 			<scope>compile</scope>
 		</dependency>
+		<!-- Implementação do Bean Validation -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>5.1.3.Final</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 </project>
