--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 			<version>3.1.0</version>
 			<scope>provided</scope>
 		</dependency>
+
 		<!-- Núcleo do Hibernate -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -36,6 +37,7 @@
 			<version>4.3.8.Final</version>
 			<scope>compile</scope>
 		</dependency>
+
 		<!-- Implementação de EntityManager da JPA -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -43,25 +45,59 @@
 			<version>4.3.8.Final</version>
 			<scope>compile</scope>
 		</dependency>
+
 		<!-- Driver JDBC do PostgreSQL -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>9.4.1212</version>
 		</dependency>
+
 		<!-- Mojarra (implementacao do JSF) -->
 		<dependency>
+
 			<groupId>org.glassfish</groupId>
 			<artifactId>javax.faces</artifactId>
 			<version>2.2.10</version>
 			<scope>compile</scope>
 		</dependency>
+
 		<!-- Implementação do Bean Validation -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>5.1.3.Final</version>
 			<scope>compile</scope>
+		</dependency>
+
+		<!-- Weld (implementação do CDI) -->
+		<dependency>
+			<groupId>org.jboss.weld.servlet</groupId>
+			<artifactId>weld-servlet</artifactId>
+			<version>2.4.3.Final</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<!-- Weld depende do Jandex -->
+		<dependency>
+			<groupId>org.jboss</groupId>
+			<artifactId>jandex</artifactId>
+			<version>2.0.3.Final</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<!-- OmniFaces (utilitarios para JSF) -->
+		<dependency>
+			<groupId>org.omnifaces</groupId>
+			<artifactId>omnifaces</artifactId>
+			<version>2.0</version>
+			<scope>compile</scope>
+		</dependency>
+		<!-- PrimeFaces -->
+		<dependency>
+			<groupId>org.primefaces</groupId>
+			<artifactId>primefaces</artifactId>
+			<version>6.1</version>
 		</dependency>
 	</dependencies>
 
